# vim: set noexpandtab:

2012-06-24 Steve
	* Added single lepton trigger matching for our dilepton triggers
	* This way we have more flexibility to implement the best logic later
	* Added event trigger flags to SusyD3PDAna and SusyNtMaker
	* Changed jet/met calibration to RefFinal (LC jets)
	* Updated submission scripts and sample lists
		* New dataSamples with data12 containers
		* New SusyNt DS naming convention by request
		* Added single top tchan samples
	* Tagging SusyCommon-00-00-11

2012-06-23 Steve
	* Updated the pileup file usage and lumi
	* Update mcSamples
	* Tagging SusyCommon-00-00-10

2012-06-22 Steve
	* Updated to latest MultiLep usage
	* Now includes switch for controlling the jet/met calibration: m_metCalib
		* For now I'm leaving it as Simplified20 (EMJES), but will switch soon
	* Added SV0 and MV1 b-taggers to SusyNtMaker
	* Fixed/updated to latest SUSY GRL
	* Added 2nd pileup tool for A-B5 unblinded region
	* Added available 2012 triggers

2012-06-21 Matt
	* Added Photon methods to SusyD3PDAna and SusyNtMaker to load and save.
	* Flag for saving: -savePh (default is false)
	* Class now depends on PhotonTools and PhotonD3PDObject

2012-06-20 Steve
	* Updated to twentyinvfb version of MultiLep, and SUSYTools v71
	* Added calculation of num good vertex (nTracks > 4)
	* Added preliminary 2012 triggers:
		* EF_e24vhi_medium1
		* EF_2e12Tvh_loose1
		* EF_mu24i_tight
		* EF_2mu13
		* EF_e12Tvh_medium1_mu8
	* Move to 2012 pileup reweighting files:
		* $ROOTCOREDIR/data/PileupReweighting/mc12a_defaults.prw.root
		* $ROOTCOREDIR/data/MultiLep/ilumicalc_histograms_EF_e24vhi_medium1_200841-203524.root
	* Tagging SusyCommon-00-00-09
		* First tag for 2012 data/mc

2012-06-19 Steve
	* Fixed event timer calculation
	* Added helper script for tagging package: scripts/makeTag.sh
	* Tagging SusyCommon-00-00-08
		* Last tag for 2011 data/mc

2012-06-18 Steve
	* Added PDFTool for reweighting 7 TeV -> 8 TeV
	* Added switch in Makefile for controlling PDFTool usage.