@@ -1,5 +1,9 @@
 # vim: set noexpandtab:
 
+2012-06-25 Steve
+	* Added missing trigger: mu18_tight_mu8_EFFS
+	* Tagging SusyCommon-00-00-12
+
 2012-06-24 Steve
 	* Added single lepton trigger matching for our dilepton triggers
 	* This way we have more flexibility to implement the best logic later
